Tue Nov 23 20:20:27 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/meta.html: add description of "keywords" meta tag property.
	add links to keywords_factor & meta_description_factor attributes.

Tue Nov 23 20:07:20 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(setVariables & hilight): added Sergey's idea
	for start_highlight, end_highlight & page_number_separator attributes.
	* htcommon/defaults.cc: added defaults for these.
	* htdoc/attrs.html, cf_by{name,prog}.html: documented them.

Tue Nov 23 19:58:28 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/ExternalParser.cc: added support for external converters
	as extension to external_parsers attribute.
	* htdoc/attrs.html: Updated external_parsers with new description
	and examples of external converters.

Tue Nov 23 19:52:27 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc(transSGML), htdig/SGMLEntities.cc(translateAndUpdate):
	Fix the infamous problem in htdig 3.1.3 of mangling URL parameters that
	contain bare ampersands (&), and not converting &amp; entities in URLs.

	* htdig/Retriever.cc(IsLocal & IsLocalUser): Fix PR#688, where
	htdig goes into an infinite loop if an entry in local_urls
	(or local_user_urls) is missing a '=' (or a ',').

	* htcommon/cgi.cc(cgi): Fix bug in reading long queries via POST
	method (PR#668).

	* htnotify/htnotify.cc(send_notification): apply Jason Haar's fix
	to quote the sender name "ht://Dig Notification Service".

Wed Sep 22 11:12:38 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/ChangeLog, htdoc/isp.html, htdoc/FAQ.html,
	htdoc/RELEASE.html, htdoc/THANKS.html, htdoc/attrs.html,
	htdoc/bugs.html, htdoc/contents.html, htdoc/main.html,
	htdoc/require.html, htdoc/uses.html, htdoc/where.html: Update for
	3.1.3 release and synch with latest versions from the website.

Wed Sep 15 17:54:31 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	A few changes to satisfy the AIX xlC compiler: