@@ -79,6 +79,10 @@
 		menu with a limited set of predetermined categories or
 		keywords to restrict the search. This can be very useful
 		for very structured pages.
+		<br>Note that the words may appear anywhere in the document.
+		The scope of these required words is <b>not</b> limited to
+		words in META tags with the "keywords" or "htdig-keywords"
+		property, despite what the parameter name may suggest.
 	  </dd>
 	  <dt>
 		<b>matchesperpage</b>
@@ -145,7 +149,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 <!-- hhmts start -->
-Last modified: Mon Feb  8 20:41:52 EST 1999
+Last modified: Tue Nov 23 21:23:10 EST 1999
 <!-- hhmts end -->
   </body>
 </html>
